# fscl-xscience-c

./: README.md  meson.build
.github/workflows/: cd_docker.yml
code/include/fossil/: xscience.h
code/include/fossil/xscience/: arospace.h  biological.h  dataset.h  decision.h  element.h  physics.h  qcircuit.h  qubit.h  robotics.h
code/include/trilobite/: xscience.h
code/include/trilobite/xscience/: arospace.h  element.h  physics.h  qubit.h  robotics.h  rocket.h
code/source/: arospace.c  biological.c  dataset.c  decision.c  element.c  meson.build  physics.c  qcircuit.c  qubit.c  robotics.c  rocket.c
demo/: demo_arospace.c  demo_element.c  demo_physics.c  demo_qubit.c  demo_robotics.c  demo_rocket.c  demo_satellite.c  meson.build
subprojects/: fscl-xmock-c.wrap
test/: meson.build  xtest_arospace.c  xtest_biological.c  xtest_dataset.c  xtest_decision.c  xtest_element.c  xtest_physics.c  xtest_qcircuit.c  xtest_qubit.c  xtest_robotics.c  xtest_rocket.c  xunit_runner.c
